# PRTS

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: custom-template.md
.github/workflows/: python-package.yml
ISSUE_TEMPLATE/: issue-template.md
examples/: precision_recall_for_time_series.py
prts/: __init__.py  prts.py
prts/base/: time_series_metrics.py
prts/interfaces/: time_series_metrics.py
prts/time_series_metrics/: fscore.py  precision.py  precision_recall.py  recall.py
tests/: test_fscore.py  test_interfaces.py  test_precision.py  test_precision_recall.py  test_recall.py
