[tool.poetry]
name = "prts"
version = "1.0.0.3"
description=""
readme = "README.md"
license = "LICENSE"
authors = ["Ryohei Izawa <rizawa@ridge-i.com>", "Ryosuke Sato<sarrrrry.sarrrrry@gmail.com>", "Masanari Kimura<mkimura@ism.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
sklearn = "^0.0"
matplotlib = "^3.3.3"
seaborn = "^0.11.1"
flake8 = "^3.8.4"
autoflake = "^1.4"
isort = "^5.6.4"
black = "^20.8b1"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
